@@ -23,8 +23,6 @@
  * questions.
  */
 
-import java.util.concurrent.*
-
 /**
  * The main build script for JavaFX.
  *
@@ -102,6 +100,16 @@ void defineProperty(String name, Properties props, String defaultValue) {
  */
 String library(String name) {
     return "${IS_WINDOWS ? '' : 'lib'}$name.${IS_WINDOWS ? 'dll' : IS_MAC ? 'dylib' : 'so'}"
+}
+
+String cygpath(String path) {
+    if (!IS_WINDOWS) return path;
+    ByteArrayOutputStream out = new ByteArrayOutputStream();
+    exec {
+        standardOutput = out
+        commandLine "cmd", "/c", "cygpath", "-m", path
+    }
+    return out.toString().trim();
 }
 
 /******************************************************************************
@@ -196,7 +204,8 @@ ext.GLASS_PLATFORM = COMPILE_TARGET.glassName;
 //    c:\Program Files (x86)\Java\jre8\
 // Because of this, you may sometimes get the jdk's JRE (in which case the logic we used to have here
 // was correct and consistent with all other platforms), or it might be the standalone JRE (for the love!).
-ext.JAVA_HOME = System.getProperty("java.home");
+def envJavaHome = cygpath(System.getenv("JAVA_HOME"));
+ext.JAVA_HOME = envJavaHome == null || envJavaHome.equals("") ? System.getProperty("java.home") : envJavaHome;
 def javaHomeFile = file(JAVA_HOME);
 defineProperty("JDK_HOME",
         javaHomeFile.name == "jre" ?
@@ -204,28 +213,29 @@ defineProperty("JDK_HOME",
         javaHomeFile.name.startsWith("jre") ?
         new File(javaHomeFile.getParent(), "jdk1.${javaHomeFile.name.substring(3)}.0").toString() :
         JAVA_HOME); // we have to bail and set it to something and this is as good as any!
-defineProperty("JAVA", "$JDK_HOME/bin/java${IS_WINDOWS ? '.exe' : ''}");
-defineProperty("JAVAC", "$JDK_HOME/bin/javac${IS_WINDOWS ? '.exe' : ''}");
-defineProperty("JAVAH", "$JDK_HOME/bin/javah${IS_WINDOWS ? '.exe' : ''}");
-defineProperty("JAVADOC", "$JDK_HOME/bin/javadoc${IS_WINDOWS ? '.exe' : ''}");
+defineProperty("JAVA", cygpath("$JDK_HOME/bin/java${IS_WINDOWS ? '.exe' : ''}"));
+defineProperty("JAVAC", cygpath("$JDK_HOME/bin/javac${IS_WINDOWS ? '.exe' : ''}"));
+defineProperty("JAVAH", cygpath("$JDK_HOME/bin/javah${IS_WINDOWS ? '.exe' : ''}"));
+defineProperty("JAVADOC", cygpath("$JDK_HOME/bin/javadoc${IS_WINDOWS ? '.exe' : ''}"));
 defineProperty("JDK_DOCS", "http://download.oracle.com/javase/7/docs/api");
-defineProperty("BINARY_STUB", "file://$JDK_HOME/jre/lib/ext/jfxrt.jar");
+defineProperty("BINARY_STUB", cygpath("$JDK_HOME/jre/lib/ext/jfxrt.jar"));
+ext.BINARY_STUB = "".equals(BINARY_STUB) ? null : files(BINARY_STUB);
 
 // COMPILE_WEBKIT specifies whether to build all of webkit. COMPILE_GSTREAMER
 // specifies whether to build GStreamer.
 defineProperty("COMPILE_WEBKIT", "false")
 defineProperty("COMPILE_GSTREAMER", "false")
-COMPILE_WEBKIT = Boolean.parseBoolean(COMPILE_WEBKIT)
-COMPILE_GSTREAMER = Boolean.parseBoolean(COMPILE_GSTREAMER)
+ext.COMPILE_WEBKIT = Boolean.parseBoolean(COMPILE_WEBKIT)
+ext.COMPILE_GSTREAMER = Boolean.parseBoolean(COMPILE_GSTREAMER)
 
 // Define the SWT.jar that we are going to have to download during the build process based
 // on what platform we are compiling from (not based on our target). SWT in particular is
 // only used when we are compiling for desktop platforms.
-ext.SWT_FILE_NAME = IS_MAC ? "org.eclipse.swt.cocoa.macosx.x86_64_3.7.2.v3740f.jar" :
-    IS_WINDOWS && IS_64 ? "org.eclipse.swt.win32.win32.x86_64_3.7.2.v3740f.jar" :
-    IS_WINDOWS && !IS_64 ? "org.eclipse.swt.win32.win32.x86_3.7.2.v3740f.jar" :
-    IS_LINUX && IS_64 ? "org.eclipse.swt.gtk.linux.x86_64_3.7.2.v3740f.jar" :
-    IS_LINUX && !IS_64 ? "org.eclipse.swt.gtk.linux.x86_3.7.2.v3740f.jar" : "";
+ext.SWT_FILE_NAME = IS_MAC ? "org.eclipse.swt.cocoa.macosx.x86_64_3.7.2.v3740f" :
+    IS_WINDOWS && IS_64 ? "org.eclipse.swt.win32.win32.x86_64_3.7.2.v3740f" :
+    IS_WINDOWS && !IS_64 ? "org.eclipse.swt.win32.win32.x86_3.7.2.v3740f" :
+    IS_LINUX && IS_64 ? "org.eclipse.swt.gtk.linux.x86_64_3.7.2.v3740f" :
+    IS_LINUX && !IS_64 ? "org.eclipse.swt.gtk.linux.x86_3.7.2.v3740f" : "";
 
 // Specify the build configuration (Release or Debug)
 defineProperty("CONF", "Release");
@@ -300,12 +310,11 @@ if (COMPILE_TARGET == CompileTarget.ARM_VFP && !IS_LINUX) throw new Exception("M
 if (COMPILE_TARGET == null) throw new Exception("Unable to determine compilation platform, or COMPILE_TARGET!");
 
 // Make sure JAVA_HOME/bin/java exists
-defineProperty("JAVA", "$JDK_HOME/bin/java");
-if (!file("$JAVA").exists()) throw new Exception("Missing or incorrect path to 'java': '$JAVA'. Perhaps bad JDK_HOME? $JDK_HOME")
-if (!file("$JAVAC").exists()) throw new Exception("Missing or incorrect path to 'javac': '$JAVAC'. Perhaps bad JDK_HOME? $JDK_HOME")
-if (!file("$JAVAH").exists()) throw new Exception("Missing or incorrect path to 'javah': '$JAVAH'. Perhaps bad JDK_HOME? $JDK_HOME")
-if (!file("$JAVADOC").exists()) throw new Exception("Missing or incorrect path to 'javadoc': '$JAVADOC'. Perhaps bad JDK_HOME? $JDK_HOME")
-if (!file("$BINARY_STUB").exists()) logger.warn("Missing or incorrect path to 'jfxrt.jar': '$BINARY_STUB'. Perhaps bad JDK_HOME? $JDK_HOME")
+if (!file(JAVA).exists()) throw new Exception("Missing or incorrect path to 'java': '$JAVA'. Perhaps bad JDK_HOME? $JDK_HOME")
+if (!file(JAVAC).exists()) throw new Exception("Missing or incorrect path to 'javac': '$JAVAC'. Perhaps bad JDK_HOME? $JDK_HOME")
+if (!file(JAVAH).exists()) throw new Exception("Missing or incorrect path to 'javah': '$JAVAH'. Perhaps bad JDK_HOME? $JDK_HOME")
+if (!file(JAVADOC).exists()) throw new Exception("Missing or incorrect path to 'javadoc': '$JAVADOC'. Perhaps bad JDK_HOME? $JDK_HOME")
+if (BINARY_STUB != null && !BINARY_STUB.getSingleFile().exists()) logger.warn("Missing or incorrect path to 'jfxrt.jar': '${BINARY_STUB.asPath}'. Perhaps bad JDK_HOME? $JDK_HOME")
 
 // Verify that CONF is something useful
 if (CONF != "Release" && CONF != "Debug") logger.warn("Unknown configuration CONF='$CONF'. Treating as 'Release'");
@@ -335,7 +344,7 @@ logger.info("OS_NAME: $OS_NAME");
 logger.info("OS_ARCH: $OS_ARCH");
 logger.info("JAVA_HOME: $JAVA_HOME");
 logger.info("JDK_HOME: $JDK_HOME");
-logger.info("BINARY_STUB: ${file(BINARY_STUB)}");
+logger.info("BINARY_STUB: ${BINARY_STUB == null ? '' : BINARY_STUB.asPath}");
 logger.info("HUDSON_JOB_NAME: $HUDSON_JOB_NAME");
 logger.info("HUDSON_BUILD_NUMBER: $HUDSON_BUILD_NUMBER");
 logger.info("PROMOTED_BUILD_NUMBER: $PROMOTED_BUILD_NUMBER");
@@ -374,7 +383,8 @@ void addNative(Project project, String name) {
     def javahTask = project.task("javah$name", type: JavaHeaderTask, dependsOn: project.classes, group: "Build") {
         description = "Generates JNI Headers for $name"
         source project.sourceSets.main.output.classesDir
-        classpath = project.files(project.sourceSets.main.output.classesDir, project.files(project.BINARY_STUB))
+        classpath = project.files(project.sourceSets.main.output.classesDir)
+        if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB
         output = project.file("$project.buildDir/generated-src/headers/$name")
     }
     def ccTask = project.task("cc$name", type: CCTask, dependsOn: javahTask, group: "Build") {
@@ -470,21 +480,26 @@ allprojects {
     // just easy for most things. The custom "ivy" repo is for downloading SWT. The way it
     // works is to setup the download URL such that it will resolve to the actual jar file
     // to download. See SWT_FILE_NAME for the name of the jar that will be used as the
-    // "artifact" in the pattern below.
+    // "artifact" in the pattern below. Note that the closed builds use different repositories
+    // so if you are debugging a closed-build artifact related build issue, check out the
+    // closed gradle file instead.
     repositories {
         mavenCentral()
         ivy {
             url "http://download.eclipse.org/eclipse/updates/3.7/R-3.7.2-201202080800/plugins/"
             layout "pattern", {
-                artifact "[artifact]"
+                artifact "[artifact].[ext]"
             }
+        }
+        flatDir {
+            dir "$JDK_HOME/jre/lib/"
         }
     }
 
     // By default all of our projects require junit for testing so we can just
     // setup this dependency here.
     dependencies {
-        testCompile("junit:junit:4.8.2");
+        testCompile(group: "junit", name: "junit", version: "4.8.2");
     }
 
     // At the moment the ASM library shipped with Gradle that is used to
@@ -495,7 +510,7 @@ allprojects {
     // we start building with Java 9.
     test {
         jvmArgs("-Djava.ext.dirs=");
-        classpath = classpath + rootProject.files(rootProject.BINARY_STUB);
+        if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB;
         executable = JAVA;
         enableAssertions = true;
         testLogging.exceptionFormat = "full";
@@ -581,9 +596,11 @@ project(":graphics") {
 
     dependencies {
         compile project(":base"), BUILD_SRC
-        compile ":$SWT_FILE_NAME:"
-        stubCompile "junit:junit:4.8.2", project(":base").sourceSets.test.output, sourceSets.main.output
-        antlr3("org.antlr:antlr-runtime:3.1.3");
+        compile name: "plugin"
+        compile name: SWT_FILE_NAME
+        stubCompile group: "junit", name: "junit", version: "4.8.2",
+            project(":base").sourceSets.test.output, sourceSets.main.output
+        antlr3 group: "org.antlr", name: "antlr", version: "3.1.3"
     }
 
     // Add the tasks for native compilation of Glass
@@ -642,11 +659,14 @@ project(":graphics") {
          [fileName: "LinearConvolve", generator: "CompileLinearConvolve", outputs: "-hw"],
          [fileName: "LinearConvolveShadow", generator: "CompileLinearConvolve", outputs: "-hw"]].each { settings ->
             javaexec {
+                executable = JAVA
                 workingDir = "modules/graphics"
                 main = settings.generator
                 classpath = configurations.compile + configurations.antlr3
+                classpath += files("$buildDir/classes/main")
                 classpath += files("$buildDir/classes/jsl-compilers/decora")
                 args = ["-i", sourceDir, "-o", destinationDir, "-t", "-pkg", "com/sun/scenario/effect", "$settings.outputs", "$settings.fileName"]
+                jvmArgs "-Djava.ext.dirs="
             }
         }
     }
@@ -687,11 +707,13 @@ project(":graphics") {
         inputFiles.include "**/*.jsl"
         inputFiles.each { file ->
             javaexec {
+                executable = JAVA
                 workingDir = "modules/graphics"
                 main = "CompileJSL"
                 classpath = configurations.compile + configurations.antlr3
                 classpath += files("$buildDir/classes/jsl-compilers/prism", "modules/graphics/src/main/jsl-prism") // for the .stg
                 args = ["-i", sourceDir, "-o", destinationDir, "-t", "-pkg", "com/sun/prism", "-d3d", "-es2", "-name", "$file"]
+                jvmArgs "-Djava.ext.dirs="
             }
         }
     }
@@ -718,11 +740,13 @@ project(":graphics") {
     }
     task testWithoutStub(type: Test, dependsOn: ":graphics:compileJava", group: "Verification") {
         jvmArgs "-Djava.ext.dirs="
-        classpath = sourceSets.test.runtimeClasspath + rootProject.files(rootProject.BINARY_STUB)
+        classpath = sourceSets.test.runtimeClasspath
+        if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB
     }
     task testWithStub(type: Test, dependsOn: [":graphics:compileJava"], group: "Verification") {
         jvmArgs "-Djava.ext.dirs=", "-Djavafx.toolkit=com.sun.javafx.pgstub.StubToolkit", "-DCSS_META_DATA_TEST_DIR=${file('$buildDir/classes/main/javafx')}"
-        classpath = sourceSets.stub.runtimeClasspath + sourceSets.main.runtimeClasspath + rootProject.files(rootProject.BINARY_STUB)
+        classpath = sourceSets.stub.runtimeClasspath + sourceSets.main.runtimeClasspath
+        if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB
         testClassesDir = file("$buildDir/classes/stub")
         testResultsDir = file("$buildDir/stub-results")
         testReportDir = file("$buildDir/reports/stub")
@@ -741,6 +765,7 @@ project(":graphics") {
 project(":controls") {
     dependencies {
         compile BUILD_SRC, project(":base"), project(":graphics"), project(":designTime")
+        // TODO not sure how to specify this? processResources project(":base"), project(":graphics")
         testCompile project(":graphics").sourceSets.stub.output
     }
 
@@ -764,9 +789,14 @@ project(":controls") {
         "$buildDir/resources/main/com/sun/javafx/scene/control/skin/modena/modena.css",
         "$buildDir/resources/main/com/sun/javafx/scene/control/skin/modena/touch.css"].each { css ->
             javaexec {
-                classpath "$buildDir/classes/main"
+                executable = JAVA
+                workingDir = "modules/controls"
+                classpath files("$buildDir/classes/main",
+                        project(":graphics").sourceSets.main.output,
+                        project(":base").sourceSets.main.output)
                 main = "com.sun.javafx.css.parser.Css2Bin"
                 args css
+                jvmArgs "-Djava.ext.dirs="
             }
         }
     }
@@ -791,7 +821,7 @@ project(":swt") {
 
     dependencies {
         compile BUILD_SRC, project(":base"), project(":graphics")
-        compile ":$SWT_FILE_NAME:"
+        compile name: SWT_FILE_NAME
     }
 }
 
@@ -825,7 +855,7 @@ project(":fxpackager") {
     }
 
     dependencies {
-        compile "org.apache.ant:ant:1.8.2"
+        compile group: "org.apache.ant", name: "ant", version: "1.8.2"
     }
 
     // When producing the jar, we need to relocate a few class files
@@ -1013,16 +1043,19 @@ allprojects {
         // Note that the compileFooJava task is automatically created whenever a source set is
         // defined. So the "test" source set automatically creates a "compileTestJava" task (among others).
         if (name == "compileTestJava") {
-            classpath = sourceSets.test.compileClasspath + rootProject.files(rootProject.BINARY_STUB)
+            classpath = sourceSets.test.compileClasspath
+            if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB
         } else if (name == "compileStubJava") {
-            classpath = sourceSets.stub.compileClasspath + rootProject.files(rootProject.BINARY_STUB)
+            classpath = sourceSets.stub.compileClasspath
+            if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB
         } else if (name == "compileJava") {
-            compile.options.compilerArgs += ["-s", "$buildDir/generated-src/builders"]
             // Not everything needs the builder processor
             if (["graphics", "controls", "swing", "swt", "base", "fxml"].contains(project.name)){
+                compile.options.compilerArgs += ["-s", "$buildDir/generated-src/builders"]
                 compile.options.compilerArgs += ["-processor", "javafx.builder.processor.BuilderProcessor"]
             }
-            classpath = sourceSets.main.compileClasspath + rootProject.files(rootProject.BINARY_STUB)
+            classpath = sourceSets.main.compileClasspath
+            if (rootProject.BINARY_STUB != null) classpath += rootProject.BINARY_STUB
         } else {
             logger.info("Not using BINARY_STUB in compilation: $name")
         }
@@ -1125,6 +1158,9 @@ task javadoc(type: Javadoc) {
     // Might need a classpath
     classpath = files(projectsToDocument.collect { project ->
         project.sourceSets.main.compileClasspath
+    });
+    classpath += files(projectsToDocument.collect { project ->
+        project.sourceSets.main.output
     });
     exclude("com/**/*", "javafx/scene/ParentDesignInfo*", "Compile*", "javafx/builder/**/*");
     options.windowTitle("JavaFX ${RELEASE_NAME}")
@@ -1323,13 +1359,15 @@ allprojects {
 
     // Configure all projects to include $buildDir/generated-src/builders in the generated IDEA project files.
     // Also need to un-exclude the build-dir since we put stuff in it, and then re-exclude other stuff
-    configurations {
-      binaryStub
-      binaryStub.extendsFrom(compile)
-    }
+    if (rootProject.BINARY_STUB != null) {
+        configurations {
+          binaryStub
+          binaryStub.extendsFrom(compile)
+        }
 
-    dependencies {
-      binaryStub rootProject.files(rootProject.BINARY_STUB)
+        dependencies {
+          binaryStub rootProject.BINARY_STUB
+        }
     }
 
     idea {
@@ -1343,20 +1381,23 @@ allprojects {
                     new File(buildDir, "libs"),
                     new File(buildDir, "resources"),
                     new File(buildDir, "tmp")];
-            scopes.COMPILE.plus += configurations.binaryStub
 
-            // Some hackery. I have to make sure the binary stub is the VERY LAST entry
-            // in the class path or things will be somewhat unpredictable
-            iml {
-                withXml { xmlProvider ->
-                    def root = xmlProvider.asNode();
-                    // Find the <root url=".../jfxrt.jar!/" />. Walk up 3 steps to <orderEntry>
-                    def orderEntry = root.depthFirst().find { it.name() == "root" }.parent().parent().parent(); // && it.@url.contains(rootProject.files(rootProject.BINARY_STUB))
-                    if (orderEntry.name() != "orderEntry") throw new Exception("Couldn't find the order entry");
-                    // Move that <orderEntry> to be the last child of its parent.
-                    def parent = orderEntry.parent();
-                    parent.remove(orderEntry);
-                    parent.append(orderEntry);
+            if (rootProject.BINARY_STUB != null) {
+                scopes.COMPILE.plus += configurations.binaryStub
+
+                // Some hackery. I have to make sure the binary stub is the VERY LAST entry
+                // in the class path or things will be somewhat unpredictable
+                iml {
+                    withXml { xmlProvider ->
+                        def root = xmlProvider.asNode();
+                        // Find the <root url=".../jfxrt.jar!/" />. Walk up 3 steps to <orderEntry>
+                        def orderEntry = root.depthFirst().find { it.name() == "root" }.parent().parent().parent(); // && it.@url.contains(rootProject.files(rootProject.BINARY_STUB))
+                        if (orderEntry.name() != "orderEntry") throw new Exception("Couldn't find the order entry");
+                        // Move that <orderEntry> to be the last child of its parent.
+                        def parent = orderEntry.parent();
+                        parent.remove(orderEntry);
+                        parent.append(orderEntry);
+                    }
                 }
             }
         }
